--- a/.pullapprove.yml
+++ b/.pullapprove.yml
@@ -1,6 +1,6 @@
 ####################################################################################
 ####################################################################################
-#                               Angular Code Ownership                             #
+#                               sistema de riego                             #
 ####################################################################################
 ####################################################################################
 #
